--- a/styling.css
+++ b/styling.css
@@ -1,14 +1,17 @@
 @import url("https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;700;900&display=swap");
 :root {
-  /* background-colors */
+  /* text-colors */
   --darkgrayblue: #4682b4;
   --verydarkgray: #333333;
   --lightgray: #cccccc;
   --green: #00ed82;
 
-  /* text-colors */
+  /* background-colors */
   --hoverstate: #ebedf2;
   --font: Rubik, sans-serif;
+  --offblack: #151516;
+  --offwhite: #ebedf2;
+  --lightoffwhite: #f7f7f9;
   /* need to fix the font still */
 }
 
@@ -37,16 +40,25 @@
   box-shadow: inset 0 100px 150px rgba(0, 0, 0, 0.7);
   position: relative;
 }
+.login {
+  position: absolute;
+  right: 0;
+  top: 0;
+  color: white;
+  font-size: 15px;
+  padding: 10px;
+  font-weight: 500;
+  margin: 20px 30px;
+}
 
 .main-container {
-  /* border: 2px solid white; */
   height: 75%;
   margin: 10px 0 50px 0;
   justify-content: center;
   transform: translateY(-20px);
 }
 
-.start-initial-text {
+.green {
   color: var(--green);
   font-size: 13px;
   margin: 15px;
@@ -61,36 +73,30 @@
   height: 100px;
   width: 250px;
   margin: 10px 0 0 0;
-  /* border: 2px solid white; */
 }
 
 .start-desc-text1 {
   font-size: 1.5rem;
   font-weight: 500;
   margin: 5px 0 20px 0;
-  font-size: 16pxpx;
-}
-
-.get-bundle {
-  position: absolute;
-  width: 100%;
-  bottom: 0;
-  height: 20%;
-  background-color: var(--darkgrayblue);
+  /* font-size: 16px; */
 }
 
 .sign-but {
   background-color: white;
   height: 50px;
   width: 250px;
-  border: 2px solid black;
+  /* border: 2px solid black; */
+  color: var(--verydarkgray);
   z-index: 2;
   margin: 20px 0 15px 0;
   border-radius: 5px;
   color: black;
   font-weight: 500;
   cursor: pointer;
+  transition: all 200ms;
 }
+
 .sign-but:hover {
   background-color: var(--hoverstate);
 }
@@ -99,7 +105,76 @@
   color: var(--lightgray);
 }
 
+.get-bundle {
+  position: absolute;
+  width: 100%;
+  bottom: 0;
+  height: 20%;
+
+  background: var(--offblack);
+  background: linear-gradient(90deg, rgb(39, 49, 54) 35%, rgb(33, 63, 88) 85%);
+  display: flex;
+  justify-content: space-between;
+  /* justify-content: space-evenly; */
+  align-items: center;
+}
+
+.get-bundle--left {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0 20px;
+}
+
+.get-bundle--left-text {
+  /* border: 3px solid white; */
+  display: flex;
+  justify-content: space-evenly;
+  flex-direction: column;
+  height: 100px;
+  font-size: 24px;
+  padding: 0 10px;
+}
+.get-bundle--left .green {
+  margin: 0;
+}
+a {
+  font-size: 13px;
+  text-decoration: underline;
+  color: var(--lightgray);
+}
+.get-bundle--left img {
+  height: 80px;
+  margin: 0 20px;
+}
+.get-bundle--right,
+.get-bundle--button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.get-bundle--right {
+  height: 100px;
+  width: 300px;
+  flex-direction: column;
+}
+.get-bundle--button {
+  border: 2px solid white;
+  color: white;
+  border-radius: 5px;
+  font-weight: 700;
+  margin: 10px 0;
+  padding: 15px 25px;
+  transition: all 200ms;
+}
+.get-bundle--button:hover {
+  color: black;
+  font-weight: 700;
+  background-color: white;
+}
 /* ---------start page done------------- */
+
 section {
   height: 100vh;
   background-color: black;
