--- a/styling.css
+++ b/styling.css
@@ -21,7 +21,7 @@
   padding: 0;
   font-family: var(--font);
   box-sizing: border-box;
-  /* overflow-x: hidden; */
+  overflow-x: hidden;
 }
 section {
   height: 100vh;
@@ -367,7 +367,6 @@ a {
   font-size: 13px;
 }
 .card-bold {
-  /* font-weight: 700; */
   font-size: 24px;
 }
 /* ---------second page done------------- */
