--- a/styling.css
+++ b/styling.css
@@ -495,6 +495,7 @@ footer {
   justify-content: center;
   align-items: flex-start;
   border-bottom: 2px solid var(--lightgray);
+  overflow-y: hidden;
 }
 ul {
   flex-direction: column;
